formularios de comida y bebida listos y se implemento el componente de pedidos

--- a/src/app/components/dashboard/bebida/listabebida/listabebida.component.html
+++ b/src/app/components/dashboard/bebida/listabebida/listabebida.component.html
@@ -1,3 +1,5 @@
-<p>
-  listabebida works!
-</p>
+<h3>
+  Lista de bebidas
+</h3>
+<br><br>
+<p>aqui apareceran la lista de bebidas que se ha subido a la base de datos y el control de eliminacion de estos.</p>
