--- a/src/app/components/dashboard/comida/gestioncomida/gestioncomida.component.html
+++ b/src/app/components/dashboard/comida/gestioncomida/gestioncomida.component.html
@@ -1,3 +1,56 @@
-<p>
-  gestioncomida works!
-</p>
+<div class="body">
+    <div class="row">
+      <div class="col-lg-12">
+        <h4>Crear datos de comida</h4>
+        <hr>
+      </div>
+    </div>
+    <form id="formulario_ofertas">
+      <div class="row">
+      <div class="col-lg-4 form-group">
+        <label for="">Tipo de plato:</label>
+        <br>
+        <select name="" id="" class="form-control">
+          <option value="null">Seleccione...</option>
+          <option value="Almuerzo">Almuerzo</option>
+          <option value="Desayuno">Desayuno</option>
+          <option value="Pizza">Pizza</option>
+          <option value="Carne">Carne</option>
+          <option value="Sopa">Sopa</option>
+          <option value="Postre">Postre</option>
+        </select>
+      </div>
+      <div class="col-lg-4 form-group">
+        <label for="">Nombre del producto:</label>
+        <br>
+        <input type="text" class="form-control" name="" id="" placeholder="ingrese nombre del plato o comida">
+      </div>
+      <div class="col-lg-4 form-group">
+        <label for="">Precio:</label>
+        <br>
+        <input type="number" class="form-control" placeholder="ingrese precio en $COP">
+      </div>
+      <div class="col-lg-12 form-group">
+        <label for="">Imagen del producto:</label>
+        <br>
+        <div class="input-group">
+          <label class="input-group-btn txtimagen">
+            <span class="btn btn-primary btn-file">
+              Seleccionar imagen&hellip; <input type="file" style="display: none;">
+            </span>
+          </label>
+          <input type="text" class="form-control" readonly>
+        </div>
+      </div>
+      <div class="col-lg-12 form-group">
+        <label for="">Descripcion:</label>
+        <br>
+        <textarea name="" id="" class="form-control" cols="30" rows="2" placeholder="agregue una descripcion (porciones, ingredientes, etc.)"></textarea>
+      </div>
+      <div class="col-lg-12 form-group">
+        <button class="btn btn-success btn-lg">Continuar</button>
+      </div>
+    </div>
+  </form>
+</div>
+  
