--- a/src/app/components/dashboard/listaofertas/listaofertas/listaofertas.component.html
+++ b/src/app/components/dashboard/listaofertas/listaofertas/listaofertas.component.html
@@ -1,1 +1,4 @@
 <h3>Lista de ofertas</h3>
+<br><br>
+<p>aqui apareceran la lista de comidas y bebidas que se ha subido 
+    <br> como oferta a la base de datos y el control de eliminacion de estos.</p>
