ya hace login e ingresa al aplicativo

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,7 +2,7 @@
   <div class="form-group">
     <label for="usuario">usuario:</label>
     <br>
-    <input type="text" formControlName="usuario" name="usuario" id="usuario" placeholder="nombre de usuario">
+    <input type="text" formControlName="username" name="usuario" id="usuario" placeholder="direccion de correo electronico">
   </div>
   <br>
   <div class="form-group">
