--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,8 +1,60 @@
-<form [formGroup]="loginForm">
+<ngx-spinner bdColor="rgba(0,0,0,0.9)" size="large" color="#fff" type="ball-climbing-dot">
+    <p style="font-size: 20px; color: white">abriendo negocio...</p>
+</ngx-spinner>
+<div class="animated fadeIn delay-2s">
+    <div class="limiter">
+        <div class="container-login100">
+            <div class="wrap-login100">
+                <form class="login100-form validate-form" [formGroup]="loginForm">
+                    <span class="login100-form-title p-b-26">
+                        Welcome
+                    </span>
+                    <span class="login100-form-title p-b-48">
+                        <i class="zmdi zmdi-font"></i>
+                    </span>
+
+                    <div class="wrap-input100 validate-input form-group">
+                        <input class="input100" type="email" name="email" formControlName="emailid">
+                        <span class="focus-input100" data-placeholder="Nombre de usuario:"></span>
+                    </div>
+
+                    <div class="wrap-input100 validate-input form-group">
+                        <span class="btn-show-pass">
+                            <mat-icon>visibility</mat-icon>
+                        </span>
+                        <input class="input100" type="password" name="pass" formControlName="passwd">
+                        <span class="focus-input100" data-placeholder="Contraseña:"></span>
+                    </div>
+
+                    <div class="container-login100-form-btn form-group">
+                        <div class="wrap-login100-form-btn">
+                            <div class="login100-form-bgbtn"></div>
+                            <button class="login100-form-btn" [disabled]="!loginForm.valid" name="btnLogin" (click)="inicar()">
+                                Iniciar sesión
+                            </button>
+                        </div>
+                    </div>
+
+                    <div class="text-center p-t-115">
+                        <span class="txt1">
+                            ¿Olvidaste tu contraseña?
+                        </span>
+
+                        <a class="txt2" href="#">
+                            Click aquí
+                        </a>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- <form [formGroup]="loginForm">
     <div class="form-group">
         <label for="usuario">usuario:</label>
         <br>
-        <input type="text" formControlName="emailid" placeholder="direccion de correo electronico">
+        <input type="text" formControlName="emailid" placeholder="dirección de correo electrónico">
     </div>
     <br>
     <div class="form-group">
@@ -14,4 +66,4 @@
     <div class="form-group">
         <button [disabled]="!loginForm.valid" name="btnLogin" (click)="inicar()">Iniciar sesion</button>
     </div>
-</form>
+</form> -->
