--- a/src/app/components/dashboard/comida/gestioncomida/gestioncomida.component.css
+++ b/src/app/components/dashboard/comida/gestioncomida/gestioncomida.component.css
@@ -1,1 +1,13 @@
 @import "../../ofertas/ofertas.component.css";
+.example-right-align {
+    text-align: right;
+}
+
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none;
+  -moz-appearance: none; 
+  -o-appearance: none;
+  appearance: none; 
+  margin: 0; 
+}
