--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -1,10 +1,10 @@
 body {
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Google Sans' sans-serif;
     background: #fafafa;
 }
 
 p {
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Google Sans' sans-serif;
     font-size: 1.1em;
     font-weight: 300;
     line-height: 1.7em;
@@ -25,20 +25,13 @@ a:focus {
     border: none;
     border-radius: 0;
     margin-bottom: 40px;
-    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
+    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3);
 }
 
 .navbar-btn {
     box-shadow: none;
     outline: none !important;
     border: none;
-}
-
-.line {
-    width: 100%;
-    height: 1px;
-    border-bottom: 1px dashed #ddd;
-    margin: 40px 0;
 }
 
 /* ---------------------------------------------------
@@ -51,15 +44,17 @@ a:focus {
 }
 
 #sidebar {
+    font-family: 'Google Sans' sans-serif;
     width: 250px;
     position: fixed;
     top: 0;
     left: 0;
     height: 100vh;
     z-index: 999;
-    background: #7386D5;
+    background-image: linear-gradient(to bottom, #272727, #575757);
     color: #fff;
     transition: all 0.3s;
+    padding: 10px;
 }
 
 #sidebar.active {
@@ -68,12 +63,11 @@ a:focus {
 
 #sidebar .sidebar-header {
     padding: 20px;
-    background: #6d7fcc;
+    
 }
 
 #sidebar ul.components {
     padding: 20px 0;
-    border-bottom: 1px solid #47748b;
 }
 
 #sidebar ul p {
@@ -88,14 +82,13 @@ a:focus {
 }
 
 #sidebar ul li a:hover {
-    color: #7386D5;
+    color: #272727;
     background: #fff;
 }
 
 #sidebar ul li.active>a,
 a[aria-expanded="true"] {
     color: #fff;
-    background: #6d7fcc;
 }
 
 a[data-toggle="collapse"] {
@@ -113,11 +106,12 @@ a[data-toggle="collapse"] {
 ul ul a {
     font-size: 0.9em !important;
     padding-left: 30px !important;
-    background: #6d7fcc;
+    background: #575757;
 }
 
 ul.CTAs {
     padding: 20px;
+    align-content: center;
 }
 
 ul.CTAs a {
@@ -126,17 +120,11 @@ ul.CTAs a {
     display: block;
     border-radius: 5px;
     margin-bottom: 5px;
-}
-
-a.download {
-    background: #fff;
-    color: #7386D5;
-}
-
-a.article,
-a.article:hover {
-    background: #6d7fcc !important;
-    color: #fff !important;
+    background-color:none;
+    border: 1px solid #ffffff;
+    position: absolute;
+    bottom: 10px;
+    width: 75%;
 }
 
 /* ---------------------------------------------------
@@ -151,6 +139,7 @@ a.article:hover {
     position: absolute;
     top: 0;
     right: 0;
+    background-color: antiquewhite;
 }
 
 #content.active {
