--- a/src/app/components/dashboard/ofertas/ofertas.component.html
+++ b/src/app/components/dashboard/ofertas/ofertas.component.html
@@ -8,14 +8,17 @@
   <form id="formulario_ofertas" [formGroup]="ofertas_form">
     <div class="row">
       <div class="col-lg-6 form-group">
-        <label for="">Nombre del producto:</label>
-        <br>
-        <input type="text" class="form-control" formControlName="producto" name="" id="" placeholder="ingrese nombre del plato o comida">
+        <mat-form-field style="width: 100%" class="example-full-width">
+          <input formControlName="producto" matInput autocomplete="off" placeholder="Nombre del Plato">
+        </mat-form-field>
       </div>
       <div class="col-lg-6 form-group">
-        <label for="">Precio:</label>
-        <br>
-        <input type="number" formControlName="precio" class="form-control" placeholder="ingrese precio en $COP">
+        <mat-form-field style="width: 100%" class="example-full-width">
+          <input formControlName="Precio" type="number" autocomplete="off" matInput class="example-right-align"
+            placeholder="Ingrese el precio">
+          <span matPrefix>$&nbsp;</span>
+          <span matSuffix>.00</span>
+        </mat-form-field>
       </div>
       <div class="col-lg-12 form-group">
         <label for="">Imagen del producto:</label>
@@ -30,12 +33,14 @@
         </div>
       </div>
       <div class="col-lg-12 form-group">
-        <label for="">Descripcion:</label>
-        <br>
-        <textarea name="" id="" formControlName="descripcion" class="form-control" cols="30" rows="2" placeholder="agregue una descripcion (porciones, ingredientes, etc.)"></textarea>
+        <mat-form-field style="width: 100%" class="example-full-width">
+          <textarea formControlName="descripcion" matInput placeholder="Descripcion del producto"></textarea>
+        </mat-form-field>
       </div>
       <div class="col-lg-12 form-group">
-        <button class="btn btn-success btn-lg" (click)="submit_handler()">Crear plato como oferta</button>
+        <button mat-raised-button [disabled]="!ofertas_form.valid" (click)="submit_handler()" color="accent">Crear
+          plato como
+          oferta</button>
       </div>
     </div>
   </form>
