--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -6,9 +6,7 @@
         </div>
 
         <ul class="list-unstyled components">
-            <p>Bienvenido:
-                <br>
-                Administrador
+            <p>Bienvenido: Administrador
             </p>
             <li class="active">
                 <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Gestionar
@@ -24,17 +22,16 @@
                 </ul>
             </li>
             <li>
-                <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Gestion de
-                    comida</a>
+                <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Gestion</a>
                 <ul class="collapse list-unstyled" id="pageSubmenu">
                     <li>
-                        <a [routerLink]="['gestionar_comida']">Gestionar comidas</a>
+                        <a [routerLink]="['gestionar_comida']">Gestionar Platos</a>
                     </li>
                     <li>
-                        <a [routerLink]="['lista_de_comida']">Lista de comidas</a>
+                        <a [routerLink]="['lista_de_comida']">Gestionar Mesas</a>
                     </li>
                     <li>
-                        <a [routerLink]="['gestionar_bebida']">Gestionar bebidas</a>
+                        <a [routerLink]="['gestionar_bebida']">Gestionar Cargos</a>
                     </li>
                     <li>
                         <a [routerLink]="['lista_de_bebida']">Lista de bebidas</a>
