--- a/src/app/components/dashboard/comida/gestioncomida/gestioncomida.component.html
+++ b/src/app/components/dashboard/comida/gestioncomida/gestioncomida.component.html
@@ -1,7 +1,7 @@
 <div class="body">
     <div class="row">
         <div class="col-lg-12">
-            <h4>Crear datos de comida</h4>
+            <h4>Crear platos</h4>
             <hr>
         </div>
     </div>
@@ -10,12 +10,8 @@
             <div class="col-md-6 form-group">
                 <mat-form-field style="width: 100%">
                     <mat-select formControlName="tipoPlato" placeholder="Tipo de plato">
-                        <mat-option value="1">Almuerzo</mat-option>
-                        <mat-option value="2">Desayuno</mat-option>
-                        <mat-option value="3">Pizza</mat-option>
-                        <mat-option value="4">Carne</mat-option>
-                        <mat-option value="5">Sopa</mat-option>
-                        <mat-option value="6">Postre</mat-option>
+                        <mat-option *ngFor="let item of tipoplato" value="{{item.id}}">{{item.nombre}}</mat-option>
+
                     </mat-select>
                 </mat-form-field>
             </div>
@@ -26,8 +22,7 @@
             </div>
             <div class="col-md-6 form-group">
                 <mat-form-field style="width: 100%" class="example-full-width">
-                    <input formControlName="Precio" type="number" autocomplete="off" matInput class="example-right-align"
-                        placeholder="Ingrese el precio">
+                    <input formControlName="Precio" type="number" autocomplete="off" matInput class="example-right-align" placeholder="Ingrese el precio">
                     <span matPrefix>$&nbsp;</span>
                     <span matSuffix>.00</span>
                 </mat-form-field>
@@ -35,14 +30,26 @@
             <div class="col-md-6 form-group">
                 <label for="">Imagen del producto:</label>
                 <br>
-                <div class="input-group">
-                    <label class="input-group-btn txtimagen">
-                        <span class="btn btn-primary btn-file">
-                            Seleccionar imagen&hellip; <input formControlName="Img" type="file" style="display: none;">
-                        </span>
-                    </label>
-                    <input type="text" formControlName="Img" class="form-control" readonly>
+                <div id="avatar-container">
+                    <img [src]="defaultAvatar">
+
+                    <label>
+                          <span>
+                              <i class="fa fa-plus"></i> 
+                              <input 
+                                  formControlName="avatar"
+                                  (change)="avatarUpload( $event.target.files )" 
+                                  type="file" 
+                                  onchange="$( '#upload-file-info' ).html( $(this).val() );">
+                          </span>
+                        </label>
+
+                    <div *ngIf=" imagenValidate == 300 || imagenValidate == 500 ">
+                        <small *ngIf=" imagenValidate == 300 " class="form-text text-danger">Solo se acepta PNG, JPG o JPEG</small>
+                        <small *ngIf=" imagenValidate == 500 " class="form-text text-danger">Máximo 2 MB</small>
+                    </div>
                 </div>
+
             </div>
             <div class="col-md-12">
                 <mat-form-field style="width: 100%" class="example-full-width">
@@ -54,4 +61,37 @@
             </div>
         </div>
     </form>
+    <br>
+    <form [formGroup]="form2">
+        <div class="row">
+            <div class="col-lg-12">
+                <h4>Crear tipo de platos</h4>
+                <hr>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-6">
+                <mat-form-field style="width: 100%" class="example-full-width">
+                    <input formControlName="nombrePlato" matInput autocomplete="off" placeholder="Nombre del Plato">
+                </mat-form-field>
+            </div>
+            <div class="col-md-6">
+                <mat-form-field style="width: 100%" class="example-full-width">
+                    <textarea formControlName="descripcion" matInput placeholder="Descripcion del producto"></textarea>
+                </mat-form-field>
+            </div>
+        </div>
+        <div class="col-lg-12 form-group">
+            <button mat-raised-button [disabled]="!form2.valid" (click)="crearTipoPlato()" color="accent">Crear Tipo plato</button>
+        </div>
+
+    </form>
+
+
+
+
+
+
+
+
 </div>
