--- a/src/app/components/dashboard/comida/listacomida/listacomida.component.html
+++ b/src/app/components/dashboard/comida/listacomida/listacomida.component.html
@@ -1,5 +1,44 @@
-<h3>
-  Lista de comidas
-</h3>
-<br><br>
-<p>aqui apareceran la lista de comidas que se han subido a la base de datos y el control de eliminacion de estos.</p>
+<div class="col-lg-12">
+    <h4>Agregar Mesas</h4>
+    <hr>
+</div>
+
+<form [formGroup]="form">
+    <div class="row">
+        <div style="width: 100%" class="col-md-6">
+            <mat-form-field style="width: 100%" class="example-full-width">
+                <input formControlName="numeromesa" type="number" matInput autocomplete="off" placeholder="Numero de la Mesa">
+            </mat-form-field>
+        </div>
+        <div class="col-md-6 form-group">
+            <mat-form-field style="width: 100%">
+                <mat-select formControlName="tipomesa" placeholder="Tipo de Mesa">
+                    <mat-option value="1">Mesa Ejecutiva</mat-option>
+                    <mat-option value="2">Mesa Preferencial</mat-option>
+                    <mat-option value="3">Mesa Comun</mat-option>
+                </mat-select>
+            </mat-form-field>
+        </div>
+    </div>
+    <div class="col-lg-12 form-group">
+        <button mat-raised-button [disabled]="!form.valid" (click)="CrearMesa()" color="accent">Continuar</button>
+    </div>
+
+</form>
+
+
+<div class="row">
+    <div class="col-lg-12">
+        <h4>Listar Mesas</h4>
+
+        <mat-list role="list">
+            <mat-list-item *ngFor="let item of mesas" role="listitem">
+                <mat-icon mat-list-icon>table_chart</mat-icon>
+                <h4 mat-line> Mesa ID: {{item.id}}</h4>
+                <p mat-line> Numero de la Mesa: {{item.num_mesa}} </p>
+            </mat-list-item>
+        </mat-list>
+
+        <hr>
+    </div>
+</div>
