--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -7,7 +7,7 @@
             <div class="wrap-login100">
                 <form class="login100-form validate-form" [formGroup]="loginForm">
                     <span class="login100-form-title p-b-26">
-                        Welcome
+                        Bienvenido
                     </span>
                     <span class="login100-form-title p-b-48">
                         <i class="zmdi zmdi-font"></i>
@@ -29,7 +29,7 @@
                     <div class="container-login100-form-btn form-group">
                         <div class="wrap-login100-form-btn">
                             <div class="login100-form-bgbtn"></div>
-                            <button class="login100-form-btn" [disabled]="!loginForm.valid" name="btnLogin" (click)="inicar()">
+                            <button class="login100-form-btn" [disabled]="!loginForm.valid" [ngClass]="{'back': !loginForm.valid}" name="btnLogin" (click)="inicar()">
                                 Iniciar sesión
                             </button>
                         </div>
